--- a/insurance/react-ui/package.json
+++ b/insurance/react-ui/package.json
@@ -7,7 +7,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "serve": "^10.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
