made save_interval_local a pure config variable, and Drive object takes it as a constructor argument

--- a/config.yaml
+++ b/config.yaml
@@ -45,7 +45,7 @@ RECORD: True
 
 REPORT_RETRY_SEC: 300
 # 2 seconds
-SAVE_LOCAL_SEC : 2
+SAVE_INTERVAL_LOCAL: 2
 
 # Applications that are enabled
 INSURANCE_ENABLED: True
