beginnings of gps integration
Signed-off-by: Malini Bhandaru <mbhandaru@vmware.com>

--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ DEVICE_DATA_FILENAME: data/car_data.csv
 SENSORS: SPEED, RPM, FUEL_LEVEL, ABSOLUTE_LOAD, ENGINE_LOAD, RELATIVE_THROTTLE_POS, THROTTLE_POS_B
 
 DISTANCE_UNITS_LABEL: miles
-
+GPS_SERIAL: /dev/ttyUSB0
 DEFAULT_GPS: 37.7992520359445,-122.41955459117891
 
 LIVE: False
