Connects and reads GPS data, writes to file and other bug fixes.
Signed-off-by: Alexandre Courouble <acourouble@vmware.com>

--- a/config.yaml
+++ b/config.yaml
@@ -14,13 +14,25 @@ VEHICLE_ID: BMW1234
 DEVICE_DATA_FILENAME: data/car_data.csv
 
 # SENSORS
-SENSORS: SPEED, RPM, FUEL_LEVEL, ABSOLUTE_LOAD, ENGINE_LOAD, RELATIVE_THROTTLE_POS, THROTTLE_POS_B
+SENSORS: 
+  - OBD
+  - GPS
+OBD_METRICS: 
+  - SPEED
+  - RPM
+  - FUEL_LEVEL
+  - ABSOLUTE_LOAD
+  - ENGINE_LOAD
+  - RELATIVE_THROTTLE_POS
+  - THROTTLE_POS_B
+
+GPS_METRICS: ...
 
 DISTANCE_UNITS_LABEL: miles
 GPS_SERIAL: /dev/ttyUSB0
 DEFAULT_GPS: 37.7992520359445,-122.41955459117891
 
-LIVE: False
+LIVE: True
 
 [EDGE]
 # how frequency we read from the obd sensors
