Modified package.json in smart_city/react-ui/ to automatically run development server on correct port.
Signed-off-by: Alexandre Courouble <acourouble@vmware.com>

--- a/smart_city/react-ui/package.json
+++ b/smart_city/react-ui/package.json
@@ -10,7 +10,7 @@
     "react-table": "^6.8.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
