Changed default port for insurance frontend dev.
Signed-off-by: Alexandre Courouble <acourouble@vmware.com>

--- a/insurance/react-ui/package.json
+++ b/insurance/react-ui/package.json
@@ -11,7 +11,7 @@
     "serve": "^10.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
